# livekit_ai_website

./: README.md  agent.py  agent_session.py  deploy.sh  deploy_backend.sh  depoly.sh  docker-compose-backend.yml  docker-compose-frontend.yml  docker-compose.yml  package-lock.json  requirements.txt  scrape.py  test.py
agents/: web_agent.py  (+1 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent_session.py  agent_session2.py  docker-compose.yml  docker-sipserver.yml  egress.yaml  entrypoint.sh  livekit-services-together.yml  livekit.yaml  lk-server-config.yml  lvk_docker-compose.yml  outbound_trunk_exotel.json  outbound_trunk_twilio.json  pyproject.toml  requirements.txt  scrape.py  server.py  server2.py  server_run.py  sip_bridge.py  sip_bridge_v2.py  sip_bridge_v3.py  sip_bridge_v4.py  sip_test.py  sip_test3.py  supervisord.conf  trigger_agent_call.py  update_trunk.py
backend/agents/: agent_prompts.py  invoice_agent.py  web_agent.py
backend/agents/ambuja/: ambuja_agent.py  ambuja_agent_prompt.py
backend/api_data_structure/: structure.py
backend/architecture/: architecture_diagram.md  outboundsipexotel.md
backend/chroma_db/: chroma.sqlite3  website_extracted_data.xlsx
backend/custom_sip_reach/: bridge.py  inbound_bridge.py  inbound_listener.py  rtp_bridge.py  sip_client.py
backend/outbound/: outbound_call.py
backend/recording/: recording.py  recordingv2.py
backend/services/: lvk_services.py
backend/shared_humanization_prompt/: tts_humanificaiton_elevnlabs.py  tts_humanification_cartesia.py
backend/vector_db/: chroma.sqlite3
(+80 files in other folders)
