[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "gunicorn>=23.0.0",
    "livekit-agents[cartesia,deepgram,elevenlabs,groq,openai,silero,turn-detector]~=1.5",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-sarvam==1.3.*",
    "openai>=2.15.0",
    "pip-system-certs>=5.3",
    "python-dotenv>=1.2.1",
    "onnxruntime>=1.17.0",
    "pjsua2-pybind11>=0.1a3",
]
